# dynosaur

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yaml
dynosaur/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT
dynosaur/examples/: default_trait.rs  next.rs  pub_trait.rs  trait_variant.rs
dynosaur/src/: __example.rs  lib.rs
dynosaur/tests/: Cargo.toml  lib.rs  ui.rs
dynosaur/tests/fail/: const-attr.rs  const-attr.stderr  const-attr.stdout  missing-strategy.rs  missing-strategy.stderr  missing-strategy.stdout  self_and_box_receivers.rs  self_and_box_receivers.stderr  self_and_box_receivers.stdout  where-self-sized-rpit.rs  where-self-sized-rpit.stderr  where-self-sized-rpit.stdout  where-self-sized.rs  where-self-sized.stderr  where-self-sized.stdout
dynosaur/tests/pass/: anynomous-args.rs  anynomous-args.stdout  arbitraty-self-types.rs  arbitraty-self-types.stdout  associated-types.rs  associated-types.stdout  async-and-non-async.rs  async-and-non-async.stdout  basic-apit.rs  basic-apit.stdout  basic-mut.rs  basic-mut.stdout  basic-no-ret.rs  basic-no-ret.stdout  basic-rpitit.rs  basic-rpitit.stdout  basic-with-self.rs  basic-with-self.stdout  basic.rs  basic.stdout  blanket-attr.rs  blanket-attr.stdout  bridge-attr.rs  bridge-attr.stdout  default-method-trait.rs  default-method-trait.stdout  generics-in-trait-def.rs  generics-in-trait-def.stdout  handle-generics-on-trait-def.rs  handle-generics-on-trait-def.stdout  handle-lifetimes.rs  handle-lifetimes.stdout  impl-future-bounds.rs  impl-future-bounds.stdout  multiple-lifetimes-and-where-clauses.rs  multiple-lifetimes-and-where-clauses.stdout  multiple-lifetimes.rs  multiple-lifetimes.stdout  non-future-impl-traits.rs  non-future-impl-traits.stdout  (+12 more)
dynosaur_derive/: Cargo.toml
dynosaur_derive/src/: expand.rs  lib.rs  lifetime.rs  receiver.rs  sig.rs  traits.rs  where_clauses.rs
